修改Home的标题，当滑动侧拉菜单时，标题同时显示在侧拉菜单上面

--- a/res/layout/content_frame.xml
+++ b/res/layout/content_frame.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/menu_bg" 
         android:layout_alignParentTop="true"
+        android:visibility="gone"
         >
 
             <ImageView
