--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -52,4 +52,13 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
     </style>
+    
+    <style name="CustomWindowTitleBackground">  
+       <item name="android:background">@drawable/menu_bg</item>  
+	</style>
+	
+    <style name="CustomTitleTheme">
+        <item name="android:windowTitleSize">46dp</item>  
+     	<item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
+    </style>
 </resources>
