--- a/res/layout/grid_card_item_layout.xml
+++ b/res/layout/grid_card_item_layout.xml
@@ -1,136 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@drawable/roundcorner"
-     >
-     
-    <RelativeLayout 
-        android:id="@+id/img_layout"
-        android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-        >
-    <ImageView 
-         android:id="@+id/show_img"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:src="@drawable/testimg"
-         android:scaleType="centerCrop"
-         android:layout_alignParentTop="true"
-         android:layout_marginTop="20dip"
-        />
-    </RelativeLayout>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="177dp"
+    android:minHeight="177dp"
+    android:maxHeight="177dp"
+    android:background="@drawable/achievement_card_base" >
     
-     <!-- quest type -->
-    <RelativeLayout 
-         android:id="@+id/quest_type"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:layout_alignParentTop="true"
-         android:gravity="left|top"
-        >
-        <ImageView 
-            android:id="@+id/quest_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:visibility="gone"
-            />
-        <ImageView 
-            android:id="@+id/quest_border"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/quest_badge_small"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            />
-    </RelativeLayout>
-    
-<!-- bottom -->
-    <LinearLayout 
-        android:id="@+id/layout_bottom"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-         android:layout_marginTop="15dip"
-         android:layout_below="@+id/img_layout"
-        >
-        <RelativeLayout 
-            android:layout_weight="1"
+    <!-- Content -->
+    <LinearLayout android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
+        
+        <ImageView
+            android:id="@+id/show_img"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center"
-            >
-            <ImageView 
-                android:id="@+id/archied_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/achived_icon"
-                />
-            <TextView 
-                android:id="@+id/archied_number"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_toRightOf="@+id/archied_img"
-                 android:layout_centerVertical="true"
-                 android:textColor="#999999"
-                 android:textSize="13sp"
-                 android:text="100"
-                 android:singleLine="true"
-                 android:layout_marginLeft="2dip"
-                />
-            <TextView 
-                android:id="@+id/archied_intro"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_below="@+id/archied_img"
-                 android:layout_centerInParent="true"
-                 android:textColor="#999999"
-                 android:textSize="13sp"
-                 android:text="Archievements"
-                 android:singleLine="true"
-                />
-        </RelativeLayout>
-        <!-- right -->
-        <RelativeLayout 
-            android:layout_weight="1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center"
-            >
-            <ImageView 
-                android:id="@+id/archied_img_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/challenging_icon"
-                />
-            <TextView 
-                android:id="@+id/archied_number_2"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_toRightOf="@+id/archied_img_2"
-                 android:layout_centerVertical="true"
-                 android:textColor="#999999"
-                 android:textSize="13sp"
-                 android:text="100"
-                 android:singleLine="true"
-                 android:layout_marginLeft="2dip"
-                />
-            <TextView 
-                android:id="@+id/archied_intro_2"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_below="@+id/archied_img_2"
-                 android:layout_centerInParent="true"
-                 android:textColor="#999999"
-                 android:textSize="13sp"
-                 android:text="Challeging"
-                 android:singleLine="true"
-                />
-        </RelativeLayout>
+            android:layout_height="114dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/testimg" />
+        
+		<LinearLayout android:layout_width="fill_parent"
+		    android:layout_height="43dp"
+		    android:layout_marginTop="2dp"
+		    android:layout_marginBottom="6dp"
+		    android:orientation="horizontal"
+		    android:gravity="center"
+		    >
+		    
+		    <LinearLayout
+		        android:layout_width="0dp"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:gravity="center" >
+
+		        <ImageView
+		            android:id="@+id/archied_img"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/achived_icon" />
+
+		        <RelativeLayout android:layout_width="wrap_content"
+		            android:layout_height="fill_parent"
+		            android:gravity="center">
+		            
+		            <TextView
+		                android:id="@+id/archied_number"
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:layout_marginLeft="4dip"
+		                android:singleLine="true"
+		                android:text="100"
+		                android:textColor="@color/text_color_black"
+		                android:textSize="13sp" />
+
+		            <TextView
+		                android:id="@+id/archied_intro"
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:layout_below="@+id/archied_number"
+		                android:singleLine="true"
+		                android:text="Archievements"
+		                android:textColor="@color/text_color_black"
+		                android:textSize="6sp" />
+
+		        </RelativeLayout>
+		        
+		    </LinearLayout>
+		    
+		    <LinearLayout android:layout_width="1dp"
+		        android:layout_height="fill_parent"
+		        android:background="@color/text_color_black" />
+		    
+		    <LinearLayout
+		        android:layout_width="0dp"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:gravity="center" >
+
+		        <ImageView
+		            android:id="@+id/archied_img_2"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/challenging_icon" />
+				
+		        <RelativeLayout android:layout_width="wrap_content"
+		            android:layout_height="fill_parent"
+		            android:gravity="center">
+
+		            <TextView
+		                android:id="@+id/archied_number_2"
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:layout_marginLeft="2dip"
+		                android:singleLine="true"
+		                android:text="100"
+		                android:textColor="@color/text_color_black"
+		                android:textSize="13sp" />
+
+		            <TextView
+		                android:id="@+id/archied_intro_2"
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:layout_below="@+id/archied_number_2"
+		                android:singleLine="true"
+		                android:text="Challeging"
+		                android:textColor="@color/text_color_black"
+		                android:textSize="6sp" />
+
+	            </RelativeLayout>
+		        
+		    </LinearLayout>
+
+		</LinearLayout>
     </LinearLayout>
-</RelativeLayout>
+    
+    <ImageView android:id="@+id/quest_border"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/quest_badge_small"/>
+    
+</FrameLayout>
+
