--- a/res/layout/explore_layout.xml
+++ b/res/layout/explore_layout.xml
@@ -1,113 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:background="#999999"
-    >
-    
-<include layout="@layout/action_bar_title"
-    android:id="@+id/header"
-    android:layout_alignParentTop="true"
-    />
 
-<RelativeLayout 
-     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_below="@+id/header"
-    >
-    <!-- buttons -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="@color/background" >
+    
+    <!-- Tab content -->
     <LinearLayout
         android:id="@+id/layout_buttons"
         android:layout_width="match_parent"
-    	android:layout_height="wrap_content" 
-    	android:orientation="horizontal"
-        >
-        <ImageView 
+        android:layout_height="75.5dp"
+        android:orientation="horizontal" >
+
+        <ImageView
             android:id="@+id/btn_feature_archi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:background="@drawable/btn_feature"
-            android:scaleType="center"
-            />
-        <ImageView 
+            android:src="@drawable/btn_feature"
+            android:scaleType="fitXY" />
+
+        <ImageView
             android:id="@+id/btn_archi_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:background="@drawable/btn_ranking"
-             android:scaleType="center"
-            />
-        <ImageView 
+            android:src="@drawable/btn_ranking"
+            android:scaleType="fitXY" />
+
+        <ImageView
             android:id="@+id/btn_hot_posts"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:background="@drawable/btn_hotposts"
-             android:scaleType="center"
-            />
+            android:src="@drawable/btn_hotposts"
+            android:scaleType="fitXY" />
     </LinearLayout>
     
-    <LinearLayout 
-         android:id="@+id/hot_layout"
-         android:layout_width="match_parent"
-    	 android:layout_height="100dip" 
-    	 android:orientation="vertical"
-    	 android:layout_below="@+id/layout_buttons"
-    	android:background="#ffffff"
-    	android:layout_margin="5dip"
-        >
-        <TextView 
-        android:id="@+id/hottags"
-        android:layout_width="fill_parent"
+    <!-- Tag content -->
+    <LinearLayout
+        android:id="@+id/hot_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#ff0000"
-        android:textSize="18sp"
-        android:text="HOT TAGS"
-        android:gravity="center"
-        />
-        <GridView 
+        android:layout_marginTop="10.5dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:background="@color/white"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/hottags"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:gravity="center"
+            android:text="HOT TAGS"
+            android:textColor="#ee5457"
+            android:textSize="15sp" />
+
+        <GridView
             android:id="@+id/hot_grid"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:cacheColorHint="#00000000"
+            android:gravity="center"
+            android:horizontalSpacing="10dp"
             android:numColumns="3"
-            android:padding="5dip"
-             android:verticalSpacing="10dp" 
-        	android:horizontalSpacing="10dp"
-        	android:gravity="center"
-        	android:scrollbars="none"
-        	android:cacheColorHint="#00000000"
-            ></GridView>
+            android:padding="12dp"
+            android:scrollbars="none"
+            android:verticalSpacing="10dp" >
+        </GridView>
     </LinearLayout>
-    
-    <!-- quest list -->
-    
-    
-    <LinearLayout 
-         android:id="@+id/quest_layout"
-         android:layout_width="match_parent"
-    	 android:layout_height="match_parent" 
-    	 android:orientation="vertical"
-    	 android:layout_below="@+id/hot_layout"
-    	android:layout_marginTop="5dip"
-        >
-        <TextView 
+
+    <TextView
         android:id="@+id/quest"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textColor="#ff0000"
-        android:textSize="18sp"
-        android:text="QUESTS"
+        android:layout_marginTop="14dp"
         android:gravity="center"
-        />
-       <ListView 
-            android:id="@+id/questlist"
-            android:layout_width="fill_parent"
-        	android:layout_height="fill_parent"
-        	android:cacheColorHint="#00000000"
-        	android:background="#999999"
-           ></ListView>
-    </LinearLayout>
-</RelativeLayout>
+        android:text="QUESTS"
+        android:textColor="#ee5457"
+        android:textSize="15sp" />
+    
+    <ListView
+        android:id="@+id/questlist"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginTop="9.5dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:cacheColorHint="@null"
+        android:divider="@null"
+        android:dividerHeight="14dp" />
 
-</RelativeLayout>
+</LinearLayout>
+
