--- a/res/layout/explorer_title.xml
+++ b/res/layout/explorer_title.xml
@@ -6,6 +6,7 @@
     android:layout_height="46dp"
     android:orientation="horizontal"
     android:gravity="center_vertical"
+    android:background="@drawable/menu_bg"
     >
     
     <ImageView
@@ -13,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:src="@drawable/menu_top_left_btn" />
+        android:src="@drawable/menu_back" />
 
     <LinearLayout android:layout_width="0.5dp"
         android:layout_height="fill_parent"
