--- a/res/layout/hot_fragment_gridview.xml
+++ b/res/layout/hot_fragment_gridview.xml
@@ -1,10 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:staggered="http://schemas.android.com/apk/res-auto" 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#ffffff"    
     android:orientation="vertical" >
 
-    <GridView
+    <com.photowall.widget.staggedGridView.StaggeredGridView
         android:id="@+id/hot_gridView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -13,6 +14,7 @@
         android:horizontalSpacing="10dp"
         android:gravity="center"
         android:scrollbars="none"
-        android:numColumns="2"
+        staggered:numColumns="2"
+        staggered:itemMargin="10dp"
         />
 </LinearLayout>
